--- a/public_html/newcss.css
+++ b/public_html/newcss.css
@@ -7,6 +7,7 @@ html {
   flex-direction: column;
   align-items: center;
   background: #eaeaea;
+  margin-top: -20px;
 }
 
 .box {
@@ -16,6 +17,7 @@ html {
   align-items: center;
   width: 600px;
   height: auto;
+  border-radius: 5px;
   border: 1px solid #dbdbdb;
   background: white;
   margin-top: 5px;
@@ -29,6 +31,7 @@ html {
   align-items: center;
   width: 600px;
   height: auto;
+  border-radius: 5px;
   background: white;
 }
 
@@ -39,4 +42,3 @@ html {
 .textbox{
   width: 100%; 
 }
-
